--- a/index.html
+++ b/index.html
@@ -11,27 +11,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="contanier1">
-        <div class="card sedan-card">
-            <img src="/Car Options/images/icon-sedans.svg" alt="sedan-logo">
-            <h2>Sedans</h2>
-            <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-                or on your next road trip.</p>
-            <a href="/">Learn More</a>
-        </div>
-        <div class="card suv-card">
-            <img src="/Car Options/images/icon-suvs.svg" alt="SUV-logo">
-            <h2>SUVs</h2>
-            <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-                and off-road adventures.</p>
-            <a href="/">Learn More</a>
-        </div>
-        <div class="card luxury-card">
-            <img src="/Car Options/images/icon-luxury.svg" alt="Luxury-logo">
-            <h2>Luxury</h2>
-            <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-                rental and arrive in style.</p>
-            <a href="/">Learn More</a>
+    <div class="main">
+        <div class="contanier1">
+            <div class="card sedan-card">
+                <img src="/Car Options/images/icon-sedans.svg" alt="sedan-logo">
+                <h2>Sedans</h2>
+                <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+                    or on your next road trip.</p>
+                <a href="/">Learn More</a>
+            </div>
+            <div class="card suv-card">
+                <img src="/Car Options/images/icon-suvs.svg" alt="SUV-logo">
+                <h2>SUVs</h2>
+                <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+                    and off-road adventures.</p>
+                <a href="/">Learn More</a>
+            </div>
+            <div class="card luxury-card">
+                <img src="/Car Options/images/icon-luxury.svg" alt="Luxury-logo">
+                <h2>Luxury</h2>
+                <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+                    rental and arrive in style.</p>
+                <a href="/">Learn More</a>
+            </div>
         </div>
     </div>
 </body>
